--- a/bms-server/src/main/resources/application.properties
+++ b/bms-server/src/main/resources/application.properties
@@ -1,6 +1,12 @@
+# [console config]
 
+spring.main.banner-mode=off
+
+
+# [web config]
 spring.mvc.view.suffix=.html
 
+# [datasource]
 
 #spring.datasource.username=sa
 #spring.datasource.password=sa1234
