--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
                 <artifactId>bms-common</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>com.glqdlt</groupId>
+                <artifactId>bms-client</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
