--- a/bms-client/pom.xml
+++ b/bms-client/pom.xml
@@ -7,15 +7,7 @@
   <groupId>com.glqdlt</groupId>
   <artifactId>bms-client</artifactId>
   <version>1.0-SNAPSHOT</version>
-
-  <!--<dependencies>-->
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.github.eirslett/frontend-maven-plugin &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>com.github.eirslett</groupId>-->
-      <!--<artifactId>frontend-maven-plugin</artifactId>-->
-      <!--<version>1.6</version>-->
-    <!--</dependency>-->
-  <!--</dependencies>-->
+  <packaging>jar</packaging>
 
   <build>
     <plugins>
