improve : 각 라우팅 전환 될 때 animation 되는 것을 disabled 함 chore : 기타 잘잘한 문구 수정

--- a/bms-client/package.json
+++ b/bms-client/package.json
@@ -4,7 +4,7 @@
     "license": "Apache",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --port 5555 --ec true",
+        "start": "ng serve --port 5555",
         "build": "ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
