chore : pom 관련 소스 정리 update : common persistence test 를 ignore 처리
chore : 올바른 패키지 명의 변경.. persistense --> persistence

--- a/bms-server/src/main/resources/application.properties
+++ b/bms-server/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 # [console config]
-
 spring.main.banner-mode=off
 
 
@@ -18,9 +17,17 @@ spring.mvc.view.suffix=.html
 #spring.h2.console.path=/console-h2
 #spring.h2.console.settings.trace=false
 
-spring.datasource.url=jdbc:mariadb://192.168.148.139:3306/test
+# TODO profile 에 따른 resource 형상 분리 필요. 예: local 은 h2, test 는 test server의 maria, prod 는 production server 의 maria ..
+
+#spring.datasource.url=jdbc:mariadb://192.168.148.139:3306/test
+#spring.datasource.username=root
+#spring.datasource.password=admin1234
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+
+
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/test_jpa
 spring.datasource.username=root
-spring.datasource.password=admin1234
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-
