improve : NotNull 처리 및 필드의 유니크한 처리 수정

--- a/bms-common/src/main/resources/application.properties
+++ b/bms-common/src/main/resources/application.properties
@@ -9,8 +9,10 @@
 #spring.h2.console.settings.trace=false
 
 
-spring.datasource.url=jdbc:mariadb://192.168.148.139:3306/test
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/test_jpa
 spring.datasource.username=root
-spring.datasource.password=admin1234
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+spring.main.banner-mode=off
