--- a/bms-server/src/main/resources/application.properties
+++ b/bms-server/src/main/resources/application.properties
@@ -30,4 +30,4 @@ spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/test_jpa
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
