--- a/bms-server/src/main/resources/application.properties
+++ b/bms-server/src/main/resources/application.properties
@@ -7,15 +7,15 @@ spring.mvc.view.suffix=.html
 
 # [datasource]
 
-#spring.datasource.username=sa
-#spring.datasource.password=sa1234
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.datasource.platform=h2
-#spring.datasource.url=jdbc:h2:~/bms;DB_CLOSE_DELAY=-1;;DB_CLOSE_ON_EXIT=FALSE
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/console-h2
-#spring.h2.console.settings.trace=false
+spring.datasource.username=sa
+spring.datasource.password=sa1234
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:~/bms;DB_CLOSE_DELAY=-1;;DB_CLOSE_ON_EXIT=FALSE
+spring.h2.console.enabled=true
+spring.h2.console.path=/console-h2
+spring.h2.console.settings.trace=false
 
 # TODO profile 에 따른 resource 형상 분리 필요. 예: local 은 h2, test 는 test server의 maria, prod 는 production server 의 maria ..
 
@@ -26,8 +26,8 @@ spring.mvc.view.suffix=.html
 #spring.jpa.hibernate.ddl-auto=update
 
 
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/test_jpa
-spring.datasource.username=root
-spring.datasource.password=12345
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/test_jpa
+#spring.datasource.username=root
+#spring.datasource.password=12345
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create
