--- a/bms-server/src/main/resources/application.properties
+++ b/bms-server/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.datasource.password=admin1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+# some test
