improve : bms-common => 구조 개선 ( 이제 common 에 datasource 관련 된 모든 환경파일을 직접 구성함 ), bms-server => message adaptor 추가

--- a/bms-server/src/main/resources/application-product.properties
+++ b/bms-server/src/main/resources/application-product.properties
@@ -1,16 +1,9 @@
 # [console config]
 spring.main.banner-mode=off
 
-
 # [web config]
 spring.mvc.view.suffix=.html
 
-# [datasource]
-
-
-spring.datasource.url=jdbc:mariadb://some..
-spring.datasource.username=username
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-        
+# bms configuration
+bms.message.redis.connection.url : http://127.0.0.1:8080
+bms.message.redis.connection.client-id : bms-server
