bms-client 의 multi module 을 임시로 해제 (추후에 배포 파이프라인이 만들어지면 다시 활성화)

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <modules>
         <module>bms-server</module>
         <module>bms-common</module>
-        <module>bms-client</module>
+        <!--<module>bms-client</module>-->
     </modules>
 
 
@@ -49,11 +49,11 @@
                 <artifactId>bms-common</artifactId>
                 <version>${bms.common.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.glqdlt</groupId>
-                <artifactId>bms-client</artifactId>
-                <version>${bms.client.version}</version>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>com.glqdlt</groupId>-->
+                <!--<artifactId>bms-client</artifactId>-->
+                <!--<version>${bms.client.version}</version>-->
+            <!--</dependency>-->
         </dependencies>
     </dependencyManagement>
 
