--- a/bms-server/pom.xml
+++ b/bms-server/pom.xml
@@ -53,10 +53,10 @@
 			<groupId>com.glqdlt</groupId>
 			<artifactId>bms-common</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.glqdlt</groupId>
-			<artifactId>bms-client</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.glqdlt</groupId>-->
+			<!--<artifactId>bms-client</artifactId>-->
+		<!--</dependency>-->
 
 
 	</dependencies>
