--- a/bms-server/src/main/resources/application-product.properties
+++ b/bms-server/src/main/resources/application-product.properties
@@ -5,5 +5,5 @@ spring.main.banner-mode=off
 spring.mvc.view.suffix=.html
 
 # bms configuration
-bms.message.redis.connection.url : http://127.0.0.1:8080
-bms.message.redis.connection.client-id : bms-server
+#bms.message.redis.connection.url : http://127.0.0.1:8080
+#bms.message.redis.connection.client-id : bms-server
