--- a/bms-common/src/main/resources/datasource-default.properties
+++ b/bms-common/src/main/resources/datasource-default.properties
@@ -5,8 +5,8 @@ spring.datasource.password=sa1234
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.platform=h2
-#spring.datasource.url=jdbc:h2:~/bms;DB_CLOSE_DELAY=-1;;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:~/bms;DB_CLOSE_DELAY=-1;;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.h2.console.enabled=true
 spring.h2.console.path=/console-h2
 spring.h2.console.settings.trace=false
