--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@
 **/package-lock.json
 **/node_modules
 **/node
-/bms-server/src/main/resources/static/**
+/bms-server/src/main/resources/static/DataTables
+
